--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 	<nav id="mobilemenu"></nav>
 	<nav id="nav_menu">
 		<ul>
-			<li><a href="index.html" class="current">Home</a></li>
-			<li><a href="discography.html" class="current">Discography</a></li>
-			<li><a href="video.html" class="current">Videos</a></li>
+			<li><a href="#" class="current">Home</a></li>
+			<li><a href="#" class="current">Discography</a></li>
+			<li><a href="#" class="current">Videos</a></li>
 			<li><a href="#" class="current">Pictures</a></li>
 		</ul>
 	</nav>
