--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<![endif]-->
 
+	<!-- Nivo Slider Styles and Themes -->
 	<link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="themes/default/default.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="themes/light/light.css" type="text/css" media="screen" />
